HelloUltraviolet/Fixtures/RejectedSource/Statements/AssignTypeMismatch/Expected.uv
//! Expected diagnostic metadata for the AssignTypeMismatch rejected-source specimen.

expectedDiagnostic("E-SEM-3133", "rule.18.Assign-Type-Err")
